--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,6 +21,7 @@
         <h4 style="margin-top: 24px;">Section gives <b>low latency</b>, <b>high availability</b> and <b>optimized cost</b> for your containerized Kubernetes applications and APIs.</h3>
         <p>Distribute your own Node Express app by visiting <a href="http://section.io/docs/tutorials/frameworks/nodeexpress/">http://section.io/docs/tutorials/frameworks/nodeexpress/</a></p>
       </div>
+      <p>this is the best place!</p>
     </main>
     <footer>
       <%- include('../partials/footer'); %>
